<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repassword">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="register">REGISTER</string>
    <string name="password_hint">Must be at minimum 6 characters long.</string>

    <string name="new_type">Add New Type</string>
    <string name="value">Add Value</string>

    <string name="null_events">You have no upcoming events.</string>
    <string name="null_groups">You are not associated with any groups.</string>

    <!-- Strings that are used in group_create_frag -->
    <string name="group_name">GROUP NAME</string>
    <string name="descriptor">Description for the group.</string>
    <string name="private_txt">Private</string>
    <string name="public_txt">Public</string>
    <string name="authorized_invite">Who can invite users?</string>
    <string name="create_group">Create Group</string>
    <string name="groups">GROUPS</string>
    <string-array name="array_invite_authorize">
        <item>Owner</item>
        <item>Admins and owner</item>
        <item>Any member</item>
    </string-array>

    <string name="group_dialog_body">It appears that you have no tags associated with your profile.
        These tags are used to find locale Groups that share the same interests as you and without
    them we can not provide you any suggestions!
    Would you like to register some tags now?</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- General Strings -->
    <string name="app_name">Kinect</string>
    <string name="discard">Discard</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="null_data">Nothing was found!</string>
    <string name="null_dashes">---</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="Temp">Temporary String</string>
    <string name="cancel">Cancel</string>
    <string name="imageDialogTitle">Pick an image or take one!</string>
    <string name="locations">Locations</string>
    <string name="creator">Created by:</string>
    <string name="empty">Nothing to show</string>
    <string name="attend">Attend</string>
    <string name="return_button">Return</string>
    <string name="add_connection">Add Connection</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="add_location">Add Location</string>
    <string name="time_holder">"HH:MM AA</string>

    <!--CORE ACTIVITY-->
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>

    <!--USER STRINGS-->
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_display_name">Display Name</string>
    <string name="connections">Connections</string>
    <string name="interests">Interests</string>
    <string name="visibility">Visibility</string>
    <string name="open_event_invite">Open to event invites</string>
    <string name="open_group_invite">Open to group invites</string>
    <string name="friends_invite">Only friends can invite me</string>
    <string name="private_invite">Invites to me are disabled</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_on">Notifications ON</string>
    <string name="notifications_off">Notifications OFF</string>
    <string name="logout">Logout</string>
    <string name="delete_acc">Delete Account</string>
    <string name="broadcast_range">Broadcast Range</string>

    <!--EVENTS FRAGMENT-->
    <string name="event_search">Find Events Near Me!</string>
    <string name="all_events">Show all events</string>
    <string name="accepted_events">Only show events I accepted</string>
    <string name="fragment_events">EventsFragment</string>

    <!--EVENT DETAIL-->
    <string name="authority">Admin</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="invited">Invited</string>
    <string name="event_empty">Empty</string>
    <string name="location">Location</string>
    <string name="host">Created By: </string>
    <string name="leave_event">Unattend Event</string>
    <string name="leave_event_message">Are you sure you want to un-attend the event?</string>
    <string name="view_event_messages">View Event Messages</string>
    <string name="view_event_users">View Event Users</string>
    <string name="null_messages">There are no posts.</string>

    <!--EVENT CREATION FRAGMENT-->
    <string name="event_name">EVENT NAME*</string>
    <string name="event_desc">DESCRIPTION*</string>
    <string name="empty_tags">NO TAGS TIED TO EVENT</string>
    <string name="event_public">Public</string>
    <string name="event_discoverable">Discoverable</string>
    <string name="event_exclusive">Exclusive</string>
    <string name="event_month">MONTH</string>
    <string name="event_day">DAY</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_start">Start Time</string>
    <string name="event_end">End Time</string>
    <string name="create_event">Create Event</string>
    <string name="event_tags">Event tags</string>
    <string name="discovery_header">Discovery Options</string>
    <string name="event_visibility">Who can view this event?</string>
    <string name="enter_address">Search a location!</string>
    <string name="event_address">EVENT ADDRESS HERE</string>
    <string name="location_tbd">Location: TBD</string>
    <string name="time_format">HH:MM</string>
    <string name="default_time">8:00 AM</string>
    <string name="date_tbd">Date TBD</string>
    <string name="event_time_suggest">Allow users to suggest new dates?</string>
    <string name="suggest">SUGGEST</string>
    <string-array name="visibility_options">
        <item>Only invited users.</item>
        <item>Users accepted by admins only.</item>
        <item>Anyone</item>
        <item>Who can join this event?</item>
    </string-array>

    <!--MAPS-->
    <string name="search_addresses">Search an address or location.</string>
    <string name="confirm_txt">Set this address as the location of your event?</string>
    <string name="confirm">CONFIRM</string>
    <string name="view_locations">Show My Locations</string>
    <string name="save_location">Save Location</string>
    <string name="set_location">Set Location</string>
    <!--GROUPS FRAGMENT-->
    <string name="group_header">YOUR GROUPS</string>
    <string name="explore_groups">EXPLORE GROUPS</string>

    <!--GROUPS DETAIL FRAGMENT-->
    <string name="group_privacy">Who can see this group?</string>
    <string name="group_invite">Who can invite to this group?</string>
    <string name="members">MEMBERS</string>
    <string name="invite_users">Invite Users</string>
    <string name="view_users">View Event Users</string>

    <!--GROUP CREATION-->
    <string name="creating_group">CREATING GROUP</string>
    <string name="add_users">Full screen</string>

    <!--MESSAGES DIALOG-->
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="invitations">INVITATIONS</string>
    <string name="title_activity_maps_">Map</string>
    <string name="new_message">Write a new message.</string>

    <!--MESSAGES-->
    <string name="post">Post</string>

</resources>