<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_face_black_18dp">
    </item>

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_edit"
        android:title="@string/Edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_edit_black_18dp">
    </item>

    <item
        android:id="@+id/action_test"
        android:title="@string/Temp"
        android:icon="@drawable/baseline_edit_black_18dp">
    </item>

    <item
        android:id="@+id/action_invites"
        android:title="@string/messages"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_mail_black_18dp">
    </item>

</menu>