<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/add_connection"
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_person_add_black_24dp"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white">
    </item>
    <item
        android:title="@string/delete_connection"
        android:id="@+id/action_delete_connection"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white">
    </item>
    <item
        android:title="@string/add_location"
        android:id="@+id/action_add_location"
        android:icon="@drawable/ic_add_location_black_24dp"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white">
    </item>
    <item android:title="@string/logout"
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom">
    </item>
</menu>