<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_invites"
        android:title="@string/messages"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        android:icon="@drawable/baseline_mail_black_18dp"
        android:visible="true"
        android:iconTint="@color/white">
    </item>

    <item
        android:id="@+id/action_create_event"
        android:title="@string/create_event"
        android:icon="@drawable/baseline_playlist_add_black_18dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:iconTint="@color/white">
    </item>

    <item
        android:id="@+id/action_create_group"
        android:title="@string/create_group"
        android:icon="@drawable/baseline_add_photo_alternate_black_18dp"
        app:showAsAction="ifRoom"
        android:visible="false">
    </item>

</menu>