<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:elevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/messages_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/messages_event_banner"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/Temp"/>
        <LinearLayout
            android:id="@+id/messages_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="4dp"
            android:background="#000000">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_month"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_day"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messages_event_banner">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ButtonBar"
                android:text="@string/cancel"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ButtonBar"
                android:text="@string/accept"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>