<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:orientation="vertical"
    android:clickable="true"
    android:background="#ffffff">

    <ProgressBar
        android:id="@+id/update_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/layout_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:hint="@string/event_name"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:textSize="18sp"
            android:hint="@string/host"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_host"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/black"
                android:padding="4dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/text_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_month"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_format"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"/>

            </LinearLayout>
            <TextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/event_desc"
                android:textSize="18sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:maxLines="3"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button_view_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_information"
        android:text="@string/view_users"
        android:drawablePadding="0dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_messages"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/button_view_users"
        android:layout_alignParentBottom="true">

    </android.support.v4.view.ViewPager>

</RelativeLayout>