<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical"
    android:clickable="true"
    android:background="#FFFFFF">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/group_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/group_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:focusable="true"
            android:textAllCaps="true"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/event_desc">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:textAllCaps="true"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/privacy_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/public_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_public"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/discoverable_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_discoverable"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/exclusive_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_exclusive"
            android:layout_weight="1"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorized_invite"/>
        <Spinner
            android:id="@+id/invite_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <!-- The TextView should be able to contain the tag objects inside of it-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Some sort of container that holds the possible tags -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >
        <Button
            android:id="@+id/discard_grp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/discard"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_light"/>

        <Button
            android:id="@+id/create_grp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:text="@string/create_group"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/fui_idp_button_background_phone"
        android:contentDescription="@string/Temp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/camera_img_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@id/image_view"
            app:layout_constraintEnd_toEndOf="@id/image_view"
            android:src="@drawable/googleg_standard_color_18"/>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>