<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/group_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/group_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:focusable="true"
            android:hint="@string/group_name"
            android:textAllCaps="true"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/desc_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/descriptor"
        android:layout_marginTop="24dp"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="48dp"
        android:background="@drawable/switch_border"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/private_rBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:button="@null"
            android:layout_weight="1"
            android:background="@drawable/switch_button"
            android:textColor="@color/browser_actions_bg_grey"
            android:text="@string/private_txt"
            android:textAllCaps="true"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/public_rBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:button="@null"
            android:layout_weight="1"
            android:background="@drawable/switch_button"
            android:text="@string/public_txt"
            android:textAllCaps="true"
            android:gravity="center"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorized_invite"/>
        <Spinner
            android:id="@+id/invite_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <!-- The TextView should be able to contain the tag objects inside of it-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Some sort of container that holds the possible tags -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >
        <Button
            android:id="@+id/discard_grp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/Widget.AppCompat.ButtonBar"
            android:text="@string/discard"
            android:textAllCaps="true"
            android:textColor="@color/common_google_signin_btn_text_light"/>

        <Button
            android:id="@+id/create_grp_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Base.Widget.AppCompat.ButtonBar"
            android:text="@string/create_group"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>