<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccentLight"
    android:clickable="true"
    android:padding="12dp">

    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cancel"
        android:src="@drawable/baseline_keyboard_arrow_up_black_18dp"
        android:background="@drawable/button_ripple"/>

    <ImageButton
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logout"
        android:src="@drawable/baseline_transfer_within_a_station_black_18dp"
        android:background="@drawable/button_ripple"/>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/profile_picture"
        android:background="#0000"
        android:src="@drawable/googleg_standard_color_18"/>

    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profile_display_name"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="8dp"/>


</android.support.constraint.ConstraintLayout>